truncated pack names fix

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -454,3 +454,7 @@
 .cardBody {
   text-align: center;
 }
+
+.cardTitle {
+  word-wrap: break-word;
+}
